-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: None
-
Component/s: performance
-
generic
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8013675 | 8 | Harold Seigel | P2 | Closed | Fixed | b88 |
| JDK-8018325 | 7u45 | Harold Seigel | P2 | Closed | Fixed | b01 |
| JDK-8013987 | 7u40 | Harold Seigel | P2 | Resolved | Fixed | b24 |
| JDK-8013162 | hs24 | Harold Seigel | P2 | Resolved | Fixed | b42 |
The default string table size (particularly for FA) is too small and should be increased.
Increasing this size does affect the size of the string table bucket array, but the increase is minimal. For apps which set a size of 60013, the increase in the array size is 460K.
Increasing this size does affect the size of the string table bucket array, but the increase is minimal. For apps which set a size of 60013, the increase in the array size is 460K.
- backported by
-
JDK-8013162 PSR:PERF Increase default string table size
-
- Resolved
-
-
JDK-8013987 PSR:PERF Increase default string table size
-
- Resolved
-
-
JDK-8013675 PSR:PERF Increase default string table size
-
- Closed
-
-
JDK-8018325 PSR:PERF Increase default string table size
-
- Closed
-