8009928: PSR:PERF Increase default string table size

Increase default string table size to 60013 for 64-bit platforms.

Reviewed-by: coleenp, dholmes